refactor translations